# novelwriter

./: .gitignore  README.md  pyproject.toml
backend/: ethical_terrain_system_prompt.txt  pyproject.toml
backend/lambda/: .dockerignore  Dockerfile  config.json  entity_miner.py  entity_mining_plan.md  entity_mining_prompt_templates.json  pydantic_models.py  pyproject.toml
backend/src/: Dockerfile.backend  webserver.py
backend/webserver/: .dockerignore  Dockerfile  config.json  main.py  pyproject.toml  utils.py
frontend/: .dockerignore  Dockerfile  Dockerfile.frontend  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/deployment/: README.md  nginx.conf  novelwriter.service
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/ui/: alert-dialog.jsx  badge.jsx  button.jsx  card.jsx  field.jsx  input.jsx  label.jsx  separator.jsx  textarea.jsx
infra/terraform/: collector-config.yaml  compute.tf  databases.tf  iam.tf  lambda.tf  main.tf  networks.tf  outputs.tf  provider.tf  secrets.tf  step_functions.tf  storage.tf  variables.tf
infra/terraform/dockerfiles/otel_collector/: collector-config.yaml
src/: config.json  entities.json  main.py  webserver.py
terraform/: compute.tf  databases.tf  iam.tf  main.tf  networks.tf  outputs.tf  provider.tf  secrets.tf  variables.tf
