[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["terraform*"]

[project]
name = "novelwriter-webserver"
version = "0.1.0"
description = "FastAPI-based server for backend stuff"
requires-python = "==3.12.*"
dependencies = [
  "pydantic == 2.12.*",
  "boto3 == 1.41.*",
  "langgraph == 1.0.*",
  "langchain == 1.1.*",
  "langchain-chroma == 1.0.*",
  "langchain-aws == 1.1.*",
  "langchain-text-splitters == 1.0.*",
  "chromadb == 1.3.*",
  "fastapi[standard] == 0.122.*"
]

authors = [
  {name = "boundlesslightbringer", email = "kunae47@gmail.com"},  
]
readme = "README.md"
license = "BSD-3-Clause-Attribution"
classifiers = [
  "Development Status :: 1 - Planning"
]

[project.optional-dependencies]
aws = [
  "boto3>=1.34,<2",
  "botocore>=1.34,<2",
  "ruff == 0.14.*",
  "pre-commit == 4.2.*",
  "pylance == 0.39.*"
]

[tool.ruff]
line-length = 100
src = ["."]
target-version = "py312"
exclude = ["terraform/"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "B", "I", "SIM"]
ignore = ["F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"